# teapot

./: .gitignore  Cargo.toml  bop.js  build  edges  faces  flake.nix  index.html  main.js  top.js  utah-beetle-only.mtl  vertices  verts
.github/workflows/: deploy.yml
src/: app.rs  bounding_box.rs  dead.rs  geometry.rs  lib.rs  main.rs  navigator.rs  renderer.rs
