[package]
name = "something"
version = "0.1.0"
edition = "2021"

[dependencies]
ordered-float = "5.3.0"
wasm-bindgen = "0.2.126"
web-sys = {
  version = "0.3.103",
  features = [
    'console',
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'CanvasRenderingContext2d',
    'HtmlCanvasElement'
  ]
}
yew = { version = "0.23", features = ["csr"] }
