[package]
name = "something"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.6.1", features = [ 'derive' ] }
i_overlay = "7.0.2"
i_triangle = "0.45.1"
ordered-float = { version = "5.3.0", features = [ 'serde' ] }
raylib = "6.0.0"
serde = { version = "1.0.228", features = [ 'derive' ] }
serde_json = "1.0.150"
